# halting-data

./: .gitignore  Containerfile  README.md  __init__.py  pyproject.toml
consumer/: pyproject.toml  validator.py
consumer/scanner/: transactions.py
consumer/src/consumer/: validation_reader.py  validator.py
data_store/transactions/gold/: .part-00000-5c53b140-ab64-427d-a70c-8db40acd13a6-c000.snappy.parquet.crc  .part-00000-6aa206d9-8627-4877-be3d-f843715de0d4-c000.snappy.parquet.crc  .part-00001-89ddb6bf-0962-4901-84ce-5ba93d9f318c-c000.snappy.parquet.crc  .part-00001-d49a376e-f123-4db5-819c-78db1641388a-c000.snappy.parquet.crc  .part-00002-7b9c61c6-877b-4525-a9cf-7a7b0ac1dd45-c000.snappy.parquet.crc  .part-00002-e8fadb6c-3e0b-4121-a846-d5a55612f8eb-c000.snappy.parquet.crc  part-00000-5c53b140-ab64-427d-a70c-8db40acd13a6-c000.snappy.parquet  part-00000-6aa206d9-8627-4877-be3d-f843715de0d4-c000.snappy.parquet  part-00001-89ddb6bf-0962-4901-84ce-5ba93d9f318c-c000.snappy.parquet  part-00001-d49a376e-f123-4db5-819c-78db1641388a-c000.snappy.parquet  part-00002-7b9c61c6-877b-4525-a9cf-7a7b0ac1dd45-c000.snappy.parquet  part-00002-e8fadb6c-3e0b-4121-a846-d5a55612f8eb-c000.snappy.parquet
producer/: README.md  ge.py  main.py  processor.py  pyproject.toml
producer/data/: create_data.py
producer/expectations/: transactions.py
producer/scanner/: scanner.py
producer/src/producer/: __init__.py  main.py  middleware.py  processor.py
producer/src/producer/expectations/: transactions.py
producer/src/producer/scanner/: scanner.py  schema.py
scripts/: count_table_size.py  data.py  delta_schema_evolution.py  plot_dq.py  poor_mans_input_validation.py  schema_inspection.py  schema_quiz.py  show_dq_table.py
scripts/data/valid/: .part-00000-49140c90-9030-4088-9827-5f70208f09b0-c000.snappy.parquet.crc  .part-00000-591f27c0-001f-410d-85dc-2b9a274997f0-c000.snappy.parquet.crc  .part-00000-6dd03402-f7d2-43d0-8a9a-7e6cd2b26f03-c000.snappy.parquet.crc  .part-00001-22e69a80-a3c6-4bfd-aef5-7589215bba86-c000.snappy.parquet.crc  .part-00001-4a68130e-6234-4548-9154-6547a22cef95-c000.snappy.parquet.crc  .part-00001-a0feb451-fba7-44cd-9047-5c19576bfb04-c000.snappy.parquet.crc  .part-00002-4a5c22e4-13b8-4f57-b9cd-ad511c1134a6-c000.snappy.parquet.crc  .part-00002-5bf89a1a-ce8b-4eab-ada1-fc7ceee68921-c000.snappy.parquet.crc  .part-00002-f719130c-9cbd-4c16-a13c-c94ac76e0a49-c000.snappy.parquet.crc  part-00000-49140c90-9030-4088-9827-5f70208f09b0-c000.snappy.parquet  (+8 more)
shared/: middleware.py  pyproject.toml
shared/src/quality_gates/: __init__.py  middleware.py
(+8 files in other folders)
