[project]
name = "quality-gates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "delta-spark>=3.3.1",
    "numpy==1.26.0",
    "pandas==2.0.3",
    "great-expectations>=1.4.0",
    "pip>=25.1.1",
    "pyspark~=3.5.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "pyside2>=5.15.2.1",
]

[dependency-groups]
dev = [
    "quality-gates",
]

[tool.uv.sources]
quality-gates = { workspace = true }
