[project]
name = "producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martijn Beenker", email = "Martijn.Beenker@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
producer = "producer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "faker>=37.1.0",
]
