[project]
name = "quality-gates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martijn Beenker", email = "Martijn.Beenker@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
